# WaterDrop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
doc/: architecture.md  project.md  protocol_v1.md
waterdrop-cli/: Cargo.toml
waterdrop-cli/src/: command.rs  event.rs  main.rs  ui.rs
waterdrop-core/: Cargo.toml
waterdrop-core/src/: lib.rs  listener.rs  protocol.rs  tls.rs  transport.rs
waterdrop-desktop/: Cargo.toml  Dioxus.toml
waterdrop-engine/: Cargo.toml
waterdrop-engine/src/: engine.rs  lib.rs  message_processor.rs  quic.rs  session.rs  tcp.rs
waterdrop-engine/tests/: engine.rs  session.rs  session_quic.rs  session_tcp.rs
waterdrop-engine/tests/common/: mod.rs
waterdrop-ui/: .gitignore  Cargo.toml  Dioxus.toml  package.json
waterdrop-ui/assets/: main.css  tailwind.css
waterdrop-ui/src/: app.rs  main.rs
waterdrop-ui/src/components/: add_device_modal.rs  device_card.rs  discover_section.rs  empty_state.rs  mod.rs  receive_file_modal.rs  saved_section.rs  send_data_modal.rs  top_bar.rs
waterdrop-ui/src/engine/: bridge.rs  config.rs  mod.rs  placeholder.rs  storage.rs
waterdrop-ui/src/models/: device.rs  mod.rs  transfer.rs
