[workspace]
members = [
    "waterdrop-cli",
    "waterdrop-core",
    "waterdrop-engine",
]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

manual_async_fn = "allow"

doc_markdown = "allow"
