[workspace]
members = [
    "waterdrop-cli",
    "waterdrop-core",
    "waterdrop-engine",
    "waterdrop-desktop",
]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

manual_async_fn = "allow"

doc_markdown = "allow"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
