[workspace]
members = [
    "waterdrop-cli",
    "waterdrop-core",
    "waterdrop-engine",
    "waterdrop-ui",
]
resolver = "3"

[workspace.lints.clippy]
doc_markdown = "allow"
manual_async_fn = "allow"

[workspace.lints.clippy.all]
level = "deny"
priority = -1

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"
