[package]
name = "waterdrop-cli"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
waterdrop-core = { path = "../waterdrop-core" }
waterdrop-engine = { path = "../waterdrop-engine" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
