[package]
name = "waterdrop-engine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
waterdrop-core = { path = "../waterdrop-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
bytes = "1.0"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
yamux = "0.13"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
